test/libsolidity/syntaxTests/storageLayoutSpecifier/struct_layout_specifier.sol
struct S layout at 23 { }
// ----
// ParserError 2314: (9-15): Expected '{' but got identifier
